--- a/packages/modding-example/src/index.html
+++ b/packages/modding-example/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8"/>
     <title>ClassicUO Web Modding Example</title>
-    <script type="module" src="app.tsx"></script>
+    <script type="module" src="mod.tsx"></script>
 </head>
 <body>
 </body>
